# proteon

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NEXT_SESSION.md  NEXT_STEPS.md  ORACLE.md  README.md  SEARCH_ROADMAP.md  TODO_NEXT_SESSION.md  TODO_PYPI.md  mkdocs.yml
benchmark/: diagnose_bucket_a.py  diagnose_convergence.py  diagnose_oom.py  diagnose_stubborn.py  download_pdbs.py  find_bad_structures.py  find_slow_prepare.py  run_benchmark.py  setup_and_run.sh  stage1_smoke.py
devdocs/: CRATES_IO_PUBLISH_STATUS.md  GEOMETRIC_DL_INFRA_ROADMAP.md  ORACLE.md  RELIABILITY_ROADMAP.md  ROADMAP.md  RUST_BATCH_SUPERVISION_CONTRACT.md  SEARCH_ROADMAP.md  STRUCTURE_SUPERVISION_SCHEMA.md
docs/: ORACLE_SETUP.md  WHY.md  architecture.md  index.md  install.md  quickstart.md  rust.md  validation.md
evident/: Dockerfile  Dockerfile.cuda  evident.yaml
examples/: 01_load_and_explore.py  02_structural_alignment.py  03_contact_map.py  04_ramachandran.py  05_sasa_analysis.py  06_geometric_dl_pipeline.py  07_bfactor_prediction.py  08_interface_residues.py  09_structure_similarity.py  10_corpus_release_smoke.py  11_search_db_persistence.py
ferritin-align/: Cargo.toml
ferritin-align/src/core/: nwdp.rs
ferritin-align/src/ext/mmalign/: mod.rs
ferritin-align/src/search/: alphabet.rs
ferritin-arrow/: Cargo.toml
ferritin-arrow/src/: atom.rs  convert.rs  lib.rs  reader.rs  writer.rs
ferritin-arrow/tests/: edge_cases.rs  roundtrip.rs
ferritin-bin/: Cargo.toml
ferritin-connector/: Cargo.toml  pyproject.toml
ferritin-connector/data/: amber96_obc.ini
ferritin-connector/src/: add_hydrogens.rs  altloc.rs  bond_order.rs  dssp.rs  hbond.rs  lib.rs  parallel.rs  py_add_hydrogens.rs  py_align_funcs.rs  py_analysis.rs  py_arrow.rs  py_dssp.rs  py_forcefield.rs  py_hbond.rs  py_io.rs  py_msa.rs  py_pdb.rs  py_sasa.rs  py_search.rs  reconstruct.rs  sasa.rs
ferritin-connector/src/forcefield/: energy.rs  gb_obc.rs  gpu.rs  md.rs  minimize.rs  mod.rs  neighbor_list.rs  params.rs  sasa_kernel.cu  topology.rs
ferritin-io/: Cargo.toml
ferritin-search/: Cargo.toml
ferritin-search/docs/: DB_FORMAT_SPEC.md
ferritin-search/examples/: cpu_vs_gpu_bench.rs
ferritin-search/src/: alphabet.rs  gapped.rs  kmer_generator.rs  kmer_index_file.rs  lib.rs  matrix.rs  padded_db.rs  prefilter.rs  reduced_alphabet.rs  search.rs  sequence.rs
ferritin-search/src/db/: dbtype.rs  index.rs  lookup.rs  mod.rs  reader.rs  source.rs  writer.rs
ferritin-search/src/gpu/: diagonal.rs  mod.rs  pssm_diagonal.cu  pssm_diagonal.rs  pssm_sw.rs  sw.cu  sw.rs
ferritin-search/tests/: oracle_search.rs  roundtrip.rs
ferritin-search/tests/data/: oracle_fixture.fasta
gpu-poc/: Cargo.toml
gpu-poc/data/: crambin_ref.json
gpu-poc/src/: batch.rs  bench_batch.rs  bench_sasa.rs  bonded_kernels.cu  main.rs  sasa_kernel.cu
proteon-align/: Cargo.toml
proteon-arrow/: Cargo.toml
proteon-arrow/src/: atom.rs  convert.rs  lib.rs  reader.rs  structure.rs  writer.rs
proteon-arrow/tests/: edge_cases.rs  roundtrip.rs
proteon-bin/: Cargo.toml
proteon-connector/: Cargo.toml  README.md  pyproject.toml
proteon-connector/src/: add_hydrogens.rs  altloc.rs  bond_order.rs  dssp.rs  fragment_templates.rs  lib.rs  parallel.rs  py_add_hydrogens.rs  py_align.rs  py_align_funcs.rs  py_analysis.rs  py_arrow.rs  py_dssp.rs  py_forcefield.rs  py_geometry.rs  py_hbond.rs  py_io.rs  py_msa.rs  py_pdb.rs  py_sasa.rs  py_search.rs  py_structure.rs  py_supervision.rs  py_transform.rs  reconstruct.rs  sasa.rs
proteon-connector/src/forcefield/: bonded_kernels.cu  energy.rs  gb_obc.rs  gpu.rs  kernel.cu  md.rs  minimize.rs  mod.rs  neighbor_list.rs  obc_kernel.cu  params.rs  topology.rs
proteon-io/: Cargo.toml
proteon-io/src/: alignment.rs  chain_list.rs  lib.rs  loader.rs  output.rs  pdb_io.rs  spicker.rs  superpose.rs  xyz.rs
proteon-search/: Cargo.toml
scripts/: preflight.sh
tests/: README.md  conftest.py  test_agent_notes.py  test_alignment.py  test_amber_invariants.py  test_analysis.py  test_arrow.py  test_artifact_checksum.py  test_charmm_invariants.py  test_cli.py  test_corpus.py  test_corpus_release.py  test_corpus_release_real_pdb.py  test_corpus_smoke.py  test_corpus_smoke_chunked.py  test_corpus_smoke_msa_wiring.py  test_corpus_validation.py  test_cross_path_parity.py  test_dump_topology_obc.py  test_failure_taxonomy.py  test_foldseek_retrieval_report.py  test_forcefield.py  test_geometry.py  test_golden_snapshots.py  test_hbond.py  test_io_rescue.py  test_loader_failure_analysis.py  test_mmalign.py  test_msa.py  test_msa_engine_wired_into_sequence_examples.py  test_msa_io.py  test_multi_retrieval_report.py  test_pdb_io.py  test_prepare.py  test_prepared_manifest.py  test_public_api_surface.py  test_python_api_wrappers.py  test_sasa.py  test_search.py  test_search_engine_from_mmseqs_db.py  (+13 more)
tools/: check_versions.py  set_version.py
validation/: alphabet_vqvae.json  alphabet_vqvae_rust.txt  alphabet_weights.json  amber96_obc_oracle.py  amber96_oracle.py  amber96_oracle_triangulate.py  bench_alignment.py  bench_foldseek.py  bench_foldseek_retrieval.py  bench_retrieval.py  bench_search.py  bench_sequence_retrieval.py  charmm19_eef1_ball_oracle.jsonl  charmm19_eef1_ball_oracle.py  consumer_smoke.py  diag_obc_params.py  extract_amber96_obc_params.py  first_real_search_release.py  foldseek_proteon_5k_50q_union50.report.json  foldseek_proteon_5k_50q_union50.report.md  foldseek_retrieval_bench_120x8_exhaustive_3di_top10.json  foldseek_retrieval_bench_120x8_permissive_top10.json  foldseek_retrieval_bench_120x8_top10.json  generate_report.py  openfold_feature_parity.py  pdb_ids_1k.txt  protein_only_corpus.py  report_foldseek_retrieval.py  report_multi_retrieval.py  retrieval_bench_cache_smoke.json  retrieval_bench_cache_tiny.json  retrieval_bench_cache_tiny_reuse.json  retrieval_bench_diagonal_rust_top10.json  retrieval_bench_diagonal_rust_top10_reuse.json  retrieval_bench_diagonal_top10.json  retrieval_bench_diagpref_filter_k6_s1_top10.json  retrieval_bench_diagpref_filter_k6_top10.json  (+34 more)
(+200 files in other folders)
