[workspace]
members = [
    "ferritin-align",
    "ferritin-arrow",
    "ferritin-io",
    "ferritin-bin",
    "ferritin-connector",
    "ferritin-search",
]
exclude = ["gpu-poc"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Uncomment for local development with a modified pdbtbx:
# [patch.crates-io]
# pdbtbx = { path = "../pdbtbx" }
