[workspace]
members = [
    "proteon-align",
    "proteon-arrow",
    "proteon-io",
    "proteon-bin",
    "proteon-connector",
    "proteon-search",
]
exclude = ["gpu-poc"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
authors = ["theGreatHerrLebert"]
license = "MIT"
repository = "https://github.com/theGreatHerrLebert/proteon"
homepage = "https://github.com/theGreatHerrLebert/proteon"
readme = "README.md"
keywords = ["bioinformatics", "protein", "pdb", "structural-biology", "tmalign"]
categories = ["science", "science::bioinformatics"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"
# elided_lifetimes_in_paths is noisy in PyO3 macro-generated code; revisit
# once #[pyclass] macros emit explicit lifetimes.

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic carve-outs: low-signal for a scientific-computing codebase that
# ports algorithms line-for-line from C++ reference implementations.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
many_single_char_names = "allow"        # math conventions: x,y,z,i,j,k
unreadable_literal = "allow"            # numeric constants kept as in C++ source
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
doc_markdown = "allow"
needless_range_loop = "allow"           # often intentional in tight loops
items_after_statements = "allow"
if_not_else = "allow"
match_same_arms = "allow"
manual_let_else = "allow"               # stylistic
uninlined_format_args = "allow"         # auto-fixable, low value
redundant_closure_for_method_calls = "allow"
needless_pass_by_value = "allow"
map_unwrap_or = "allow"
assigning_clones = "allow"
type_complexity = "allow"               # algorithmic tuple signatures from C++ port
default_trait_access = "allow"          # ZstdLevel::default() is the idiomatic call site
fn_params_excessive_bools = "allow"     # PyO3 boundary functions thread through CLI flags
struct_excessive_bools = "allow"
return_self_not_must_use = "allow"      # builder-style APIs are obvious without #[must_use]
used_underscore_binding = "allow"       # _name bindings document intent in math kernels
unnecessary_wraps = "allow"             # Result-returning is preserved for API stability
ref_option = "allow"
naive_bytecount = "allow"
float_cmp = "allow"                     # asserts in tests legitimately compare exact floats

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Uncomment for local development with a modified pdbtbx:
# [patch.crates-io]
# pdbtbx = { path = "../pdbtbx" }
