[package]
name = "ferritin-align"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Structural alignment algorithms for proteins and nucleic acids (TM-align + US-align)"

[dependencies]
anyhow = "1"

[dev-dependencies]
approx = "0.5"
