[package]
name = "ferritin-connector"
version.workspace = true
edition.workspace = true
description = "PyO3 Python bindings for ferritin structural bioinformatics tools"

[lib]
name = "ferritin_connector"
crate-type = ["cdylib", "rlib"]

[features]
cuda = ["cudarc"]

[dependencies]
ferritin-align = { path = "../ferritin-align" }
ferritin-arrow = { path = "../ferritin-arrow" }
ferritin-io = { path = "../ferritin-io" }
ferritin-search = { path = "../ferritin-search" }
pdbtbx = { git = "https://github.com/douweschulte/pdbtbx", branch = "main" }
arrow = { version = "54", features = ["ipc"] }
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
rayon = "1"
anyhow = "1"
cudarc = { version = "0.19", features = ["std", "driver", "nvrtc", "cuda-12050"], optional = true }
