[package]
name = "ferritin-connector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "PyO3 Python bindings for ferritin structural bioinformatics tools"

[lib]
name = "ferritin_connector"
crate-type = ["cdylib", "rlib"]

[features]
# Propagates to ferritin-search so its GPU search kernels are compiled in;
# without that forward, `maturin build --features cuda` would only pull
# cudarc into the connector crate and leave ferritin-search CPU-only.
cuda = ["cudarc", "ferritin-search/cuda"]

[dependencies]
ferritin-align = { path = "../ferritin-align" }
ferritin-arrow = { path = "../ferritin-arrow" }
ferritin-io = { path = "../ferritin-io" }
ferritin-search = { path = "../ferritin-search" }
pdbtbx = { git = "https://github.com/theGreatHerrLebert/pdbtbx", rev = "c82e8c08fd539b72117f2147bf4107e125d1efcd" }
arrow = { version = "54", features = ["ipc"] }
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
rayon = "1"
anyhow = "1"
cudarc = { version = "0.19", features = ["std", "driver", "nvrtc", "cuda-12050"], optional = true }
