[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "ferritin-connector"
version = "0.1.0"
description = "PyO3 bindings for ferritin structural bioinformatics tools"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["bioinformatics", "protein", "pdb", "structural-biology", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Repository = "https://github.com/theGreatHerrLebert/ferritin"

[tool.maturin]
features = ["pyo3/extension-module"]
