[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "ferritin-connector"
version = "0.1.1"
description = "PyO3 bindings for ferritin structural bioinformatics tools"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["bioinformatics", "protein", "pdb", "structural-biology", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/theGreatHerrLebert/ferritin"
Repository = "https://github.com/theGreatHerrLebert/ferritin"
Issues = "https://github.com/theGreatHerrLebert/ferritin/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
