[package]
name = "gpu-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
cudarc = { version = "0.19", features = ["std", "driver", "nvrtc", "cuda-12050"] }
ferritin-connector = { path = "../ferritin-connector" }
pdbtbx = { git = "https://github.com/theGreatHerrLebert/pdbtbx", rev = "c82e8c08fd539b72117f2147bf4107e125d1efcd" }

[[bin]]
name = "gpu-poc"
path = "src/main.rs"

[[bin]]
name = "bench-batch"
path = "src/bench_batch.rs"

[[bin]]
name = "bench-sasa"
path = "src/bench_sasa.rs"
