[package]
name = "proteon-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Structure I/O for PDB and mmCIF files"

[lints]
workspace = true

[dependencies]
proteon-align = { path = "../proteon-align" }
pdbtbx = { git = "https://github.com/theGreatHerrLebert/pdbtbx", rev = "c82e8c08fd539b72117f2147bf4107e125d1efcd" }
anyhow = "1"
